# Hnefatafl_game

./: CMakeLists.txt  CMakeUserPresets.json  Console.cpp  Console.h  Figurine.h  README.md  Tafl.cpp  Tafl.h  source.cpp
Content/: Battlelog.txt  Edda quotes.txt  rule's book.txt
